--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,4 +1,13 @@
 {
   "name": "ionicv1-simple_addressBook",
-  "app_id": ""
+  "app_id": "",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
+  ]
 }
