--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "ionicv1-simple_addressBook: An Ionic project",
   "repository": "https://github.com/Carsa85/ionicv1-simple_addressBook",
   "dependencies": {
+    "@ionic/cloud": "^0.16.0",
+    "bluebird": "^3.5.0",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4"
   },
   "scripts": {
     "postinstall": "bower install"
@@ -16,7 +18,8 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "ui-calendar": "^0.8.6"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
