--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0",
-    "ui-calendar": "^0.8.6"
+    "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
