--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,8 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.3",
     "platform.js": "platform#^1.3.4"
+  },
+  "dependencies": {
+    "angular-ui-calendar": "^1.0.2"
   }
 }
